load("@rules_cc//cc:defs.bzl", "cc_library")

CMD_FLAGS = [
    "-std=c11",
    "-pedantic-errors",
    "-Iexternal/uthash/include",
]
## macos: -UDEBUG

BOOTSTRAP_INCLUDES = [
    "-I.",
    "-Isrc",
    "-Iexternal/mibl/src",
    "-Ivendored/libs7/src",

    "-I$(GENDIR)",
    "-I$(GENDIR)/src",
]

##########
cc_binary(
    name  = "driver",
    srcs  = ["driver.c",
             "//src:bazel_config.h",
             "@uthash//:include",
             ],
    data = [
        "//mibl:dune.scm",
        "//mibl/dune:srcs"
    ],
    # defines = select({
    #     "//bzl/debug/trace": [], # "DEBUG_TRACE"],
    #     "//conditions:default":   []
    # }),
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
    ],
    deps = ["//src:mibl"],
)

################################################################
cc_test(
    name = "demo_test",
    srcs = ["template_unity_test.c"],
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
        "-I$(GENDIR)/src/hdrs",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",

        "-Ivendored/unity",
        "-Iexternal/mibl/vendored/unity",

        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",

        "-Iexternal/libs7/src"  # s7.h
    ],
    data = [
        "//mibl/dune:srcs"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE", "DEBUG_MIBL"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": [
            "_XOPEN_SOURCE=500", # strdup
            "_DEFAULT_SOURCE"    # dirent DT_* macros
        ],
        "//conditions:default":   []
    }),
    deps = [
        "//src:mibl",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)
