load("@rules_cc//cc:defs.bzl", "cc_library")

test_suite(
    name = "test",
    tests = [
        "//test/dune/deps:mibl_test",
        # "//test/dune/rules/shell:mibl_test",
        "//test/dune/rules/inferred",
        # "//test/dune/rules/stdout:mibl_test"
    ]
)

CMD_FLAGS = [
    "-std=c11",
    "-pedantic-errors",
    "-Iexternal/uthash/include",
]
## macos: -UDEBUG

BOOTSTRAP_INCLUDES = [
    "-I.",
    "-Isrc",
    "-Iexternal/mibl/lib",

    "-I$(GENDIR)",
    "-I$(GENDIR)/lib",
]

################
exports_files(["Mibl_test.sh"])
cc_binary(
    name = "mibl_test_runner",
    srcs = ["Mibl_test.c"],
    copts = [
        "-std=c11",
        "-pedantic-errors",
        "-Wall",
        "-Werror",
        "-Iexternal/uthash/include",

        "-I$(GENDIR)/lib/hdrs",

        "-Iexternal/libs7/lib"  # s7.h
    ] + select({
        "//bzl/host:debug": [""],
        "//conditions:default":   []
    }) + select({
        ## macos fastbuild: -UDEBUG
        "//conditions:default":   []
    }),
    defines = select({
        "//bzl/host:debug": ["TRACING", "DEBUG_MIBL"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": [
            "_XOPEN_SOURCE=500", # strdup
            "_DEFAULT_SOURCE"    # dirent DT_* macros
        ],
        "//conditions:default":   []
    }),
    deps = [
        "//lib:mibl",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    # timeout = "short",
    visibility = ["//test:__subpackages__"]
)

##########
# cc_binary(
#     name  = "driver",
#     srcs  = ["driver.c",
#              "//lib:bazel_config.h",
#              "@uthash//:include",
#              ],
#     data = [
#         "//scm:dune.scm",
#         "//scm/dune:srcs"
#     ],
#     # defines = select({
#     #     "//bzl/debug/trace": [], # "TRACING"],
#     #     "//conditions:default":   []
#     # }),
#     copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
#     ],
#     deps = ["//lib:mibl"],
# )

################################################################
# cc_test(
#     name = "demo_test",
#     srcs = ["template_unity_test.c"],
#     copts = CMD_FLAGS + BOOTSTRAP_INCLUDES + [
#         "-I$(GENDIR)/lib/hdrs",

#         "-Ivendored/logc",

#         "-Ivendored/unity",
#         "-Iexternal/mibl/vendored/unity",

#         "-Ivendored/uthash",
#         "-Iexternal/mibl/vendored/uthash",

#         "-Iexternal/libs7/lib"  # s7.h
#     ],
#     data = [
#         "//scm/dune:srcs"
#     ],
#     defines = select({
#         "//bzl/host:debug": ["TRACING", "DEBUG_MIBL"],
#         "//conditions:default":   []
#     }) + select({
#         "//bzl/host:linux": [
#             "_XOPEN_SOURCE=500", # strdup
#             "_DEFAULT_SOURCE"    # dirent DT_* macros
#         ],
#         "//conditions:default":   []
#     }),
#     deps = [
#         "//lib:mibl",
#         "@liblogc//lib:logc",
#         "//vendored/unity",
#         "//vendored/uthash",
#     ],
# )
