load("//src:BUILD.bzl", COPTS = "COPTS")

exports_files(["opam_switch_converter.c", "coswitch_cleaner.c"])

################################################################
####    libcoswitch - converts opam switch
################################################################
cc_library(
    name = "coswitch",
    srcs = [
        "opam_switch_converter.c",
        "//src/hdrs:opam_switch_converter.h",
        "coswitch_cleaner.c",
        "//src/hdrs:coswitch_cleaner.h",
        "//src:handlers_srcs",
        "//src:coswitch_srcs",
    ] + select({
        "//bzl/host:linux": [
            "//src/linux:strlcat.c",
            "//src/linux:strlcpy.c",
            "//src/linux:strnstr.c"],
        "//conditions:default":   []
    }) + select({
        "//compilation_mode:dbg?": [
            "//src:debug_srcs",
            # "debug.c", "//src/hdrs:debug.h",
            # "debug_mibl.c", "//src/hdrs:debug_mibl.h",
            # "debug_s7.c", "//src/hdrs:debug_s7.h"
        ],
        "//conditions:default": []
    }),

    hdrs = [
        "//src/hdrs:libmibl.h",
        # "//src/hdrs:opam_switch_converter.h",
        # "//src/hdrs:coswitch_cleaner.h",
    ],
    copts = COPTS + [
        "-Isrc",
        "-I$(GENDIR)/src",
        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-I$(GENDIR)/src/dune",
        "-I$(GENDIR)/external/mibl/src/dune",

        "-I$(GENDIR)/src/findlib",
        "-I$(GENDIR)/external/mibl/src/findlib",

        "-Iexternal/libs7/src",
        # "-Iexternal/libinih",

        "-Ivendored/libinih",
        "-Iexternal/mibl/vendored/libinih",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",

        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash"
    ],
    defines = select({
        "//compilation_mode:dbg?": ["DEBUG_TRACE", "DEBUG_MIBL"],
        "//conditions:default":   []
    }),
    deps = [
        "//src/dune",
        "//src/findlib",
        # "//src:mibl",
        "@libs7//src:s7",
        "//vendored/libinih:inih",
        "//vendored/logc",
        "//vendored/uthash",
    ],
    # ] + select({
    #     "//compilation_mode:dbg?": [":debug"],
    #     "//conditions:default": []
    # }),
    visibility = ["//visibility:public"]
)
